@@ -9,6 +9,9 @@ update-manager (1:0.87.7) hardy; urgency=low
   * DistUpgrade/DistUpgradeViewGtk.py:
     - show update details in smaller font instead of italic
   * more UI improvements as suggested by Matthew Paul Thomas
+  * DistUpgrade/DistUpgradeControler.py:
+    - enforce KeepInstalledSection rule only when running on
+      a network, otherwise we run into CD upgrade issues
 
  --
 
